--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,18 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+
+- task: CopyFilesOverSSH@0
+  inputs:
+    sshEndpoint: 'yq-vm'
+    sourceFolder: '/'
+    contents: '**'
+    targetFolder: '/tmp'
+    readyTimeout: '20000'
+
+- task: SSH@0
+  inputs:
+    sshEndpoint: 'yq-vm'
+    runOptions: 'commands'
+    commands: 'echo az>/tmp/a.log'
+    readyTimeout: '20000'
