Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
 - task: CopyFilesOverSSH@0
   inputs:
     sshEndpoint: 'yq-vm'
-    sourceFolder: '/'
+    sourceFolder: '$(Agent.BuildDirectory)'
     contents: '**'
     targetFolder: '/tmp'
     readyTimeout: '20000'
