--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     sshEndpoint: 'yq-vm'
     sourceFolder: '$(Agent.BuildDirectory)'
     contents: '**'
-    targetFolder: '/tmp'
+    targetFolder: '/tmp/az-test2/'
     readyTimeout: '20000'
 
 - task: SSH@0
